Listo para Fork

--- a/webAct2/index.html
+++ b/webAct2/index.html
@@ -22,7 +22,12 @@
         <!-- Body section -->
         <main class="body_sec">
             <section id="Content">
-                <h3><img src="../iesjesusmarin.jpg" alt="Instituto" width="40%"></h3>
+                <h3><img src="../iesjesusmarin.jpg" alt="Instituto" width="40%" /></h3>
+                <pre>
+                    Es  un centro educativo en Málaga, España, que ofrece una amplia gama de estudios, desde Educación Secundaria Obligatoria y Bachillerato 
+                    hasta Formación Profesional de grado medio y superior. Fundado en 1927, se destaca por su enfoque en la innovación tecnológica en áreas como
+                     electrónica, sonido, redes y robótica, además de promocionar actividades extracurriculares y el uso de nuevas tecnologías.
+                </pre>
             </section>
         </main>
 
